--- a/result_style.css
+++ b/result_style.css
@@ -14,8 +14,33 @@ h1 {
 	margin:auto;
 }
 
-#result_container {
+.pillar {
+	width:20px;
+	background-color:red;
+}
+
+.result_container {
+	width:50%;
+	margin-top:10px;
+	margin-left:auto;
+	margin-right:auto;
 	display:flex;
 	align-items:center;
 	justify-content:center;
+}
+
+#tests {
+	background-color:green;
+}
+
+#fails {
+	background-color:orange;
+}
+
+#errors {
+	background-color:red;
+}
+
+#skip {
+	background-color:grey;
 }
